# log

./: .gitattributes  .gitignore  CMakeLists.txt  conanfile.py
example/: CMakeLists.txt  args.cpp  colorize.cpp  coroutine.cpp  custom_logger.cpp  spans.cpp  systemd.cpp
include/rsl/: log  log_async
include/rsl/_impl/: consumable.hpp
include/rsl/logging/: args.hpp  async_logger.hpp  context.hpp  default_config.hpp  event.hpp  field.hpp  filter.hpp  formatter.hpp  interface.hpp  level.hpp  logger.hpp  output.hpp  sinks.hpp
include/rsl/logging/_impl/: args.hpp  default_config.hpp  formatter.hpp  util.hpp
include/rsl/logging/_log_impl/: buffer.hpp  hierarchy.hpp  queue.hpp
include/rsl/logging/flavor/: async.hpp  default.hpp  null.hpp
include/rsl/logging/mode/: async.hpp  basic.hpp
src/: CMakeLists.txt  context.cpp  logger.cpp
src/sinks/: CMakeLists.txt  systemd.cpp  terminal.cpp
test/: CMakeLists.txt  dummy.cpp  hierarchy.cpp
